--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"jolt-physics": "^0.16.0",
 		"lil-gui": "^0.19.1",
-		"three": "^0.160.0"
+		"three": "^0.160.0",
+		"vite-tsconfig-paths": "^4.3.1"
 	}
 }
